src/snapshots/rust_debuginfo__tests__resolve_position@x86_64-apple-darwin.snap
---
source: src/tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x10000083f",
}
