src/snapshots/rust_debuginfo__tests__resolve_position@x86_64-unknown-linux-gnu-2.snap
---
source: src/tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x7ab8",
}
