src/snapshots/rust_debuginfo__tests__resolve_position@x86_64-unknown-linux-gnu.snap
---
source: src/tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x798f",
}
